feat: release ContentCloud v0.18.0
